legacy/differential_testing/gcc_regression/gcc_reg_cb/results/gcc540/save_st/pr79568-2.c-5.4.0-1.out.txt
pr79568-2.c: In function ‘bar’:
pr79568-2.c:18:1: error: unrecognizable insn:
 }
 ^
(insn 9 8 0 2 (unspec_volatile [
            (reg:DI 90)
            (reg:SI 91)
            (const_int 1 [0x1])
        ] UNSPECV_LWPVAL_INTRINSIC) pr79568-2.c:17 -1
     (nil))
pr79568-2.c:18:1: internal compiler error: in extract_insn, at recog.c:2343
0xff8706 _fatal_insn(char const*, rtx_def const*, char const*, int, char const*)
	../../gcc/rtl-error.c:110
0xff8759 _fatal_insn_not_found(rtx_def const*, char const*, int, char const*)
	../../gcc/rtl-error.c:118
0xf7a265 extract_insn(rtx_insn*)
	../../gcc/recog.c:2343
0xb47814 instantiate_virtual_regs_in_insn
	../../gcc/function.c:1646
0xb49264 instantiate_virtual_regs
	../../gcc/function.c:1966
0xb4941e execute
	../../gcc/function.c:2015
Please submit a full bug report,
with preprocessed source if appropriate.
Please include the complete backtrace with any bug report.
See <http://gcc.gnu.org/bugs.html> for instructions.
